--- a/src/Sections/MainSection/MainSection.css
+++ b/src/Sections/MainSection/MainSection.css
@@ -1,6 +1,5 @@
 .main-section{
     padding: 24px 24px;
-    
 }
 
 @media (min-width: 1024px){
@@ -8,5 +7,6 @@
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 20px;
+       height: 70vh;
     }
 }
