--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
+@font-face {
+    font-family: 'S FPro Display';
+    src: local("S FPro Display"), url("./fonts/SF-Pro-Display-Regular.woff") format('woff');
+    /* other formats include: 'woff2', 'truetype, 'opentype',
+                              'embedded-opentype', and 'svg' */
+}
+
 p,h1,h2,h3,h4,h4{
     margin: 0px;
+    font-family: "S FPro Display";
 }
+
 .main{
     background: #f3f6f9;
     height: 100%;
